# darwin

./: .editorconfig  .envrc  .gitignore  LICENSE.txt  README.md
clj/meal-sched/: README.md  project.clj
elixir/auction_umbrella/: docker-compose.yml  mix.exs
go/atomictest/: main.go
go/coerce/: Makefile  go.mod  go.sum  main.go
go/dataflow/: go.mod
go/dbcatalog/: .gitignore  Makefile  go.mod  main.go
go/depgraph/: depgraph.go  depgraph_test.go
go/dynsubcmd/: go.mod  go.sum  main.go
go/flags/: go.mod  go.sum  main.go
go/lsm/: go.mod
go/monkey/: Makefile  go.mod  go.sum  main.go
go/pulsar-play/: go.mod  go.sum  main.go
rs/async-rust/: Cargo.toml
rs/async-rust/src/: main.rs  signals.rs
rs/lsm/: Cargo.toml  Makefile
rs/lsm/src/: lib.rs  test_util.rs
rs/lsm/src/agent/: config.rs  mod.rs
rs/lsm/src/log/: mod.rs  segment.rs
rs/normalize-backend/: Cargo.toml  README.md  docker-compose.yaml  openapi.yaml
rs/normalize-backend/config/: dev.toml
rs/normalize-backend/migrations/2021-12-28-180107_create_user/: down.sql  up.sql
rs/normalize-backend/migrations/2021-12-29-233743_create_user_token/: down.sql  up.sql
rs/normalize-backend/scripts/: connect-db  run  test
rs/normalize-backend/src/: async_helpers.rs  config.rs  error.rs  main.rs  schema.rs  state.rs
rs/normalize-backend/src/accounts/: actions.rs  mod.rs  models.rs  routes.rs
rs/normalize-backend/src/accounts/sql/: insert_user_token.sql  lookup_user_token.sql  redeem_user_token.sql
rs/normalize-backend/src/mail/: mailer.rs  mod.rs  test.rs
rs/normalize-backend/src/web/: auth.rs  mod.rs
scm/: the-little-schemer.scm
scripts/: findzet  mkzet  mkzet.sh
txt/: content-ideas.txt
(+344 files in other folders)
