[package]
name = "lsm"
version = "0.1.0"
authors = ["Andrew Meredith <andymeredith@gmail.com>"]
edition = "2018"
default-run = "cli"

[lib]
name = "lsm"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
byteorder = "1.3"
crc32fast = "1.2.1"

[dev-dependencies]
rand = "0.7.3"
