[package]
name = "normalize-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2"
actix-utils = "3"
actix-web = { version = "4.0.0-beta.19" }
config = "0.11.0"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4.0"
log = "0.4.14"
env_logger = "0.8"
serde = "1.0.126"
serde_json = "1.0.73"
rand = "0.8.4"
rust-argon2 = "0.8"
async-trait = "0.1"
thiserror = "1.0"
jsonwebtoken = "7"
futures-util = { version = "0.3.7", default-features = false }
futures-core = { version = "0.3.7", default-features = false }
